# demhc

./: .gitignore  README.md  pyproject.toml
src/demhc/: __init__.py  config.py  train.py
src/demhc/data/: __init__.py  datasets.py
src/demhc/models/: __init__.py  baseline.py  demhc.py
src/demhc/models/components/: __init__.py  attention.py  deq.py  feedforward.py  hyper_conn.py  sinkhorn.py
src/demhc/utils/: __init__.py  checkpointing.py  logging.py
