[project]
name = "demhc"
version = "0.1.0"
description = "Deep Equilibrium Models with Manifold-Constrained Hyper Connections"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "ipdb>=0.13.13",
]

[project.scripts]
demhc-train = "demhc.train:main"
demhc-compare = "demhc.compare_runs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demhc"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
